simplify fonts and fix alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,18 @@
-/*
-if this gets used, need to figure out a way to prevent buttons 
+
+/* if this gets used, need to figure out a way to prevent buttons 
 from being unaligned when going between Avenir and Segoe
-- use CSS grids?
-@font-face {
+- use CSS grids? */
+/* @font-face {
   font-family: 'Avenir Next';
   src: url(../fonts/ave_next_ssv/AvenirNextLTPro-Regular.otf) format('opentype');
-}*/
+} */
 
 html {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
   font-size: 35px;
 }
 
@@ -54,7 +54,7 @@ h1 {
 
 .logo {
   float: left;
-  padding: 20px 30px 15px 15px;
+  padding: 15px 30px 15px 15px;
 }
 
 .name {
@@ -73,14 +73,14 @@ input[type=submit] {
   border-radius: 12px;
   background-color: #222;
   color: white;
-  padding: 45px 67.5px;
+  padding: 40px 67.5px 50px 67.5px;
   border: 5px solid;
   border-color: #222;
   border-radius: 12px;
   text-decoration: none;
-  margin: 5px 10px 10px 10px;
+  margin: 10px 10px 10px 10px;
   width: 302.53px;
-  height: 151.67px;
+  height: 151.667px;
 }
 
 .update {
@@ -92,8 +92,18 @@ input[type=submit] {
   width: 157.526px;
   height: 51.667px;
   padding: 40px 67.5px 50px 67.5px;
-  margin: 15px 10px 10px 10px;
+  margin: 10px 10px 10px 10px;
 }
+
+/* .grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 155px;
+  justify-items: center;
+  justify-content: center;
+  align-items: start;
+  align-content: center;
+} */
 
 input[type=radio] {
   -webkit-appearance: none;
